// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs direction 1`] = `
<DocumentFragment>
  <div
    class="css-nm5f2c-Tabs"
  >
    <div
      class="react-tabs"
      data-tabs="true"
      dir="rtl"
    >
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-9"
          aria-disabled="false"
          aria-selected="true"
          class="react-tabs__tab react-tabs__tab--selected"
          id="react-tabs-8"
          role="tab"
          tabindex="0"
        >
          panel 1
        </li>
        <li
          aria-controls="react-tabs-11"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          id="react-tabs-10"
          role="tab"
        >
          panel 2
        </li>
      </ul>
      <div
        aria-labelledby="react-tabs-8"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="react-tabs-9"
        role="tabpanel"
      >
        panel 1
      </div>
      <div
        aria-labelledby="react-tabs-10"
        class="react-tabs__tab-panel"
        id="react-tabs-11"
        role="tabpanel"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs fontSize 1`] = `
<DocumentFragment>
  <div
    class="css-q5owpx-Tabs"
  >
    <div
      class="react-tabs"
      data-tabs="true"
    >
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-13"
          aria-disabled="false"
          aria-selected="true"
          class="react-tabs__tab react-tabs__tab--selected"
          id="react-tabs-12"
          role="tab"
          tabindex="0"
        >
          panel 1
        </li>
        <li
          aria-controls="react-tabs-15"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          id="react-tabs-14"
          role="tab"
        >
          panel 2
        </li>
      </ul>
      <div
        aria-labelledby="react-tabs-12"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="react-tabs-13"
        role="tabpanel"
      >
        panel 1
      </div>
      <div
        aria-labelledby="react-tabs-14"
        class="react-tabs__tab-panel"
        id="react-tabs-15"
        role="tabpanel"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs onSelect 1`] = `
<DocumentFragment>
  <div
    class="css-nm5f2c-Tabs"
  >
    <div
      class="react-tabs"
      data-tabs="true"
    >
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-5"
          aria-disabled="false"
          aria-selected="true"
          class="react-tabs__tab react-tabs__tab--selected"
          id="react-tabs-4"
          role="tab"
          tabindex="0"
        >
          panel 1
        </li>
        <li
          aria-controls="react-tabs-7"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          id="react-tabs-6"
          role="tab"
        >
          panel 2
        </li>
      </ul>
      <div
        aria-labelledby="react-tabs-4"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="react-tabs-5"
        role="tabpanel"
      >
        panel 1
      </div>
      <div
        aria-labelledby="react-tabs-6"
        class="react-tabs__tab-panel"
        id="react-tabs-7"
        role="tabpanel"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs overview 1`] = `
<DocumentFragment>
  <div
    class="css-nm5f2c-Tabs"
  >
    <div
      class="react-tabs"
      data-tabs="true"
    >
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-1"
          aria-disabled="false"
          aria-selected="true"
          class="react-tabs__tab react-tabs__tab--selected"
          id="react-tabs-0"
          role="tab"
          tabindex="0"
        >
          panel 1
        </li>
        <li
          aria-controls="react-tabs-3"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          id="react-tabs-2"
          role="tab"
        >
          panel 2
        </li>
      </ul>
      <div
        aria-labelledby="react-tabs-0"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="react-tabs-1"
        role="tabpanel"
      >
        panel 1
      </div>
      <div
        aria-labelledby="react-tabs-2"
        class="react-tabs__tab-panel"
        id="react-tabs-3"
        role="tabpanel"
      />
    </div>
  </div>
</DocumentFragment>
`;
